# nj.rs

./: .gitignore  Aligned_16S_rRNA_from_proteobacteria.fas  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  release.sh
.github/workflows/: release.yml  test.yml
cli/: Cargo.toml  Makefile
cli/src/: main.rs
nj/: Cargo.toml  Makefile
nj/bindings/: SubstitutionModel.ts
nj/src/: alphabet.rs  config.rs  dist.rs  distance_matrix.rs  error.rs  event.rs  fasta.rs  lib.rs  main.rs  models.rs  msa.rs  nj.rs  tree.rs
nj/tests/fixtures/: simple_dna.fasta  simple_protein.fasta
nj_lib/: Cargo.toml  Makefile
nj_lib/src/: config.rs  lib.rs
python/: Cargo.toml  Makefile  pyproject.toml
python/nj_py/: __init__.py  _nj_py.pyi
python/src/: lib.rs
python/tests/: test_nj.py
wasm/: Cargo.toml  Makefile  nj.d.ts  package-lock.json  package.json
wasm/src/: lib.rs
wasm/tests/: nj_js.node.test.mjs  nj_js.web.test.js
wasm/types/: lib_types.ts
