[workspace]
members = ["nj", "wasm", "python"]
resolver = "3"

[profile.release]
opt-level = 3
lto = true

[workspace.package]
version = "0.0.17"
edition = "2024"
authors = ["Rens Holmer"]
license = "MIT"
repository = "https://github.com/holmrenser/nj.rs"
description = "Neighbor Joining, fast phylogenetic tree construction. Library and CLI."
