[package]
name = "nj"
description = "Neighbor Joining, fast phylogenetic tree construction. Library and CLI."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true


[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[[bin]]
name = "nj"
path = "src/main.rs"

[dependencies]
bitvec = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
ts-rs = "11.1.0"

# CLI-only dependencies
[dependencies.clap]
version = "4"
features = ["derive"]
optional = true


[features]
# default build only builds the library
default = []

# feature to build CLI
cli = ["clap"]
