[package]
name = "nj"
description = "Neighbor-Joining phylogenetic tree inference. Auto-detects DNA/protein, supports multiple substitution models and bootstrap."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/nj"
keywords = ["phylogenetics", "bioinformatics", "newick", "neighbor-joining"]
categories = ["science", "algorithms", "command-line-utilities"]

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[[bin]]
name = "nj"
path = "src/main.rs"

[dependencies]
bitvec = "1.0.1"
getrandom = "0.2"
nanorand = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
ts-rs = "11.1.0"

# CLI-only dependencies
[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.indicatif]
version = "0.17"
optional = true

[dependencies.serde_json]
version = "1"
optional = true


[features]
# default build only builds the library
default = []

# feature to build CLI
cli = ["clap", "indicatif", "serde_json"]
