[package]
name = "nj_py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true


[lib]
name = "nj_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
nj = { path = "../nj" }
serde_json = "1.0.145"
serde-pyobject = "0.8.0"
