[project]
name = "nj_py"
version = "0.0.19"
requires-python = ">=3.10"
readme = "README.md"
description = "Neighbor-Joining phylogenetic tree inference. Auto-detects DNA/protein, supports multiple substitution models and bootstrap."
license = "MIT"
keywords = ["phylogenetics", "bioinformatics", "neighbor-joining", "newick"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Intended Audience :: Science/Research",
]

[project.urls]
Repository = "https://github.com/holmrenser/nj.rs"
"Bug Tracker" = "https://github.com/holmrenser/nj.rs/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8", "maturin>=1.0,<2.0"]

[tool.maturin]
strip = false
bindings = "pyo3"
features = ["pyo3/extension-module"]
out = "dist"
module-name = "nj_py._nj_py"
python-source = "."
